@@ -1,237 +1,159 @@
 package com.fitnessapp.backend.nutrition.integration;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import com.fitnessapp.backend.nutrition.dto.FoodMetadata;
 import com.fitnessapp.backend.nutrition.dto.NutritionInfo;
 import com.fitnessapp.backend.nutrition.dto.RecognizedFood;
-import com.fitnessapp.backend.nutrition.enums.CookingMethod;
-import com.fitnessapp.backend.nutrition.service.core.FoodSearchStrategyService;
+import com.fitnessapp.backend.nutrition.entity.FoodNutrition;
+import com.fitnessapp.backend.nutrition.repository.FoodNutritionRepository;
+import com.fitnessapp.backend.nutrition.service.core.FoodKeyNormalizer;
 import com.fitnessapp.backend.nutrition.service.core.NutritionEngine;
-import com.fitnessapp.backend.usda.domain.UsdaFood;
-import com.fitnessapp.backend.usda.domain.UsdaFoodNutrition;
-import com.fitnessapp.backend.usda.repository.UsdaFoodRepository;
+import com.fitnessapp.backend.nutrition.service.core.NutritionEngineImpl;
+import com.fitnessapp.backend.nutrition.service.core.NutritionLookupService;
+import jakarta.persistence.EntityManager;
+import java.math.BigDecimal;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.SpringBootConfiguration;
+import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
+import org.springframework.boot.autoconfigure.domain.EntityScan;
+import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
+import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.context.annotation.Import;
+import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
-import org.springframework.transaction.annotation.Transactional;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Optional;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-/**
- * Integration test for the complete RAG pipeline:
- * AI metadata extraction → Dynamic USDA search → Cooking method multiplier → Nutrition calculation
- *
- * Uses Testcontainers with pgvector-enabled PostgreSQL for realistic database testing.
- */
-@SpringBootTest
-@Testcontainers
-@Transactional
+@DataJpaTest(properties = {
+    "spring.jpa.hibernate.ddl-auto=create-drop",
+    "spring.flyway.enabled=false",
+    "app.seed.enabled=false"
+})
+@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
+@ContextConfiguration(classes = RagPipelineIntegrationTest.TestJpaConfig.class)
+@Import({FoodKeyNormalizer.class, NutritionLookupService.class, NutritionEngineImpl.class})
+@Testcontainers(disabledWithoutDocker = true)
 @DisplayName("RAG Pipeline Integration Tests")
 class RagPipelineIntegrationTest {
 
-    @Container
-    private static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("pgvector/pgvector:pg16")
-            .withDatabaseName("fitness_test")
-            .withUsername("test")
-            .withPassword("test");
+  @Container
+  private static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("pgvector/pgvector:pg16")
+      .withDatabaseName("fitness_test")
+      .withUsername("test")
+      .withPassword("test");
 
-    @DynamicPropertySource
-    static void configureProperties(DynamicPropertyRegistry registry) {
-        registry.add("spring.datasource.url", postgres::getJdbcUrl);
-        registry.add("spring.datasource.username", postgres::getUsername);
-        registry.add("spring.datasource.password", postgres::getPassword);
-        registry.add("spring.flyway.enabled", () -> true);
-        registry.add("spring.jpa.hibernate.ddl-auto", () -> "validate");
-        registry.add("app.seed.enabled", () -> false);
-    }
+  @DynamicPropertySource
+  static void configureProperties(DynamicPropertyRegistry registry) {
+    registry.add("spring.datasource.url", postgres::getJdbcUrl);
+    registry.add("spring.datasource.username", postgres::getUsername);
+    registry.add("spring.datasource.password", postgres::getPassword);
+    registry.add("spring.jpa.database-platform", () -> "org.hibernate.dialect.PostgreSQLDialect");
+  }
 
-    @Autowired
-    private UsdaFoodRepository usdaFoodRepository;
+  @Autowired
+  private FoodNutritionRepository foodNutritionRepository;
 
-    @Autowired
-    private FoodSearchStrategyService foodSearchStrategyService;
+  @Autowired
+  private NutritionLookupService nutritionLookupService;
 
-    @Autowired
-    private NutritionEngine nutritionEngine;
+  @Autowired
+  private NutritionEngine nutritionEngine;
 
-    @BeforeEach
-    void setUp() {
-        // Clean and seed test data
-        usdaFoodRepository.deleteAll();
-        seedTestData();
-    }
+  @Autowired
+  private EntityManager entityManager;
 
-    @Test
-    @DisplayName("Should find exact match for fried chicken breast")
-    void shouldFindExactMatchForFriedChicken() {
-        // Given: AI extracted metadata for fried chicken
-        FoodMetadata metadata = FoodMetadata.builder()
-                .baseIngredient("Chicken")
-                .form("Breast")
-                .cookingMethodStr("FRIED")
-                .modifiers(Arrays.asList("Breaded"))
-                .searchTerms(Arrays.asList("Chicken", "Breast"))
-                .estimatedWeightG(150)
-                .build();
+  @BeforeEach
+  void setUp() {
+    entityManager.createNativeQuery("CREATE EXTENSION IF NOT EXISTS pg_trgm").executeUpdate();
+    foodNutritionRepository.deleteAll();
+    seedTestData();
+  }
 
-        // When: Search for best match
-        Optional<FoodSearchStrategyService.SearchResult> searchResult = 
-                foodSearchStrategyService.findBestMatch(metadata);
+  @Test
+  void shouldLookupUsingMetadataAndApplyCookingMultiplier() {
+    FoodMetadata metadata = FoodMetadata.builder()
+        .baseIngredient("Chicken")
+        .form("Breast")
+        .cookingMethodStr("FRIED")
+        .searchTerms(List.of("chicken_breast"))
+        .build();
 
-        // Then: Should find exact fried chicken or return empty (test data may not persist)
-        if (searchResult.isPresent()) {
-            assertThat(searchResult.get().getPriority()).isGreaterThanOrEqualTo(1);
-            // If found, verify it matches our search
-            String foodName = searchResult.get().getFood().getName().toLowerCase();
-            assertThat(foodName).containsAnyOf("chicken", "fried");
-        }
-    }
+    NutritionInfo result = nutritionLookupService.lookupNutritionWithMetadata(metadata);
 
-    @Test
-    @DisplayName("Should apply cooking multiplier when only raw data available")
-    void shouldApplyCookingMultiplierForFriedFromRaw() {
-        // Given: Looking for fried beef, but only raw beef in DB
-        FoodMetadata metadata = FoodMetadata.builder()
-                .baseIngredient("Beef")
-                .cookingMethodStr("FRIED")
-                .searchTerms(Arrays.asList("Beef"))
-                .estimatedWeightG(100)
-                .build();
+    assertThat(result.getCalories()).isEqualByComparingTo(new BigDecimal("150.0"));
+    assertThat(result.getProtein()).isEqualByComparingTo(new BigDecimal("20.0"));
+    assertThat(result.getFat()).isEqualByComparingTo(new BigDecimal("3.00"));
+  }
 
-        // When: Search for best match
-        Optional<FoodSearchStrategyService.SearchResult> searchResult = 
-                foodSearchStrategyService.findBestMatch(metadata);
+  @Test
+  void shouldEnrichRecognizedFoodAndScaleByEstimatedWeight() {
+    RecognizedFood food = RecognizedFood.builder()
+        .foodKey("salmon_grilled")
+        .displayName("Grilled Salmon")
+        .estimatedGrams(150)
+        .cookingMethod("GRILLED")
+        .metadata(FoodMetadata.builder()
+            .baseIngredient("Salmon")
+            .form("Fillet")
+            .cookingMethodStr("GRILLED")
+            .searchTerms(List.of("salmon_grilled"))
+            .estimatedWeightG(150)
+            .build())
+        .build();
 
-        // Then: Should find raw beef with base match priority
-        assertThat(searchResult).isPresent();
-        assertThat(searchResult.get().getPriority()).isEqualTo(1); // Base match (needs multiplier)
-        
-        // Verify found food has nutrition data
-        UsdaFood food = searchResult.get().getFood();
-        assertThat(food.getNutrition()).isNotNull();
-        assertThat(food.getNutrition().getCalories()).isGreaterThan(BigDecimal.ZERO);
+    nutritionEngine.enrichWithNutrition(food);
 
-        // The multiplier should be 1.5x for deep-fried foods
-        assertThat(CookingMethod.FRIED.getCalorieMultiplier()).isEqualTo(1.5);
-    }
+    assertThat(food.getNutrition()).isNotNull();
+    assertThat(food.getNutrition().getCalories()).isEqualByComparingTo(new BigDecimal("390.00"));
+    assertThat(food.getNutrition().getProtein()).isEqualByComparingTo(new BigDecimal("33.00"));
+    assertThat(food.getNutrition().getFat()).isEqualByComparingTo(new BigDecimal("23.40"));
+  }
 
-    @Test
-    @DisplayName("Should enrich RecognizedFood using metadata-based RAG pipeline")
-    void shouldEnrichRecognizedFoodWithMetadata() {
-        // Given: RecognizedFood with metadata
-        RecognizedFood food = RecognizedFood.builder()
-                .foodKey("chicken_breast_fried")
-                .displayName("Fried Chicken Breast")
-                .estimatedGrams(150)
-                .cookingMethod("FRIED")
-                .metadata(FoodMetadata.builder()
-                        .baseIngredient("Chicken")
-                        .form("Breast")
-                        .cookingMethodStr("FRIED")
-                        .searchTerms(Arrays.asList("Chicken", "Breast"))
-                        .estimatedWeightG(150)
-                        .build())
-                .build();
+  @Test
+  void shouldFallbackToDefaultNutritionWhenNoMatchFound() {
+    FoodMetadata metadata = FoodMetadata.builder()
+        .baseIngredient("UnknownFood")
+        .searchTerms(List.of("unknown_food"))
+        .build();
 
-        // When: Enrich with nutrition
-        nutritionEngine.enrichWithNutrition(food);
+    NutritionInfo result = nutritionLookupService.lookupNutritionWithMetadata(metadata);
 
-        // Then: Should have nutrition calculated
-        assertThat(food.getNutrition()).isNotNull();
-        assertThat(food.getNutrition().getCalories()).isGreaterThan(BigDecimal.ZERO);
-        assertThat(food.getNutrition().getProtein()).isGreaterThan(BigDecimal.ZERO);
-    }
+    assertThat(result.getCalories()).isEqualByComparingTo(new BigDecimal("150.0"));
+    assertThat(result.getProtein()).isEqualByComparingTo(new BigDecimal("8.0"));
+    assertThat(result.getFat()).isEqualByComparingTo(new BigDecimal("6.0"));
+    assertThat(result.getCarbs()).isEqualByComparingTo(new BigDecimal("15.0"));
+  }
 
-    @Test
-    @DisplayName("Should handle grilled salmon with exact match")
-    void shouldHandleGrilledSalmon() {
-        // Given: Metadata for grilled salmon
-        FoodMetadata metadata = FoodMetadata.builder()
-                .baseIngredient("Salmon")
-                .form("Fillet")
-                .cookingMethodStr("GRILLED")
-                .searchTerms(Arrays.asList("Salmon", "Fillet"))
-                .build();
+  private void seedTestData() {
+    foodNutritionRepository.save(food("chicken_breast", "Chicken Breast", 100.0, 20.0, 2.0, 0.0));
+    foodNutritionRepository.save(food("salmon_grilled", "Salmon, Grilled", 200.0, 22.0, 12.0, 0.0));
+    foodNutritionRepository.save(food("steamed_rice", "Steamed Rice", 130.0, 2.7, 0.3, 28.0));
+  }
 
-        // When
-        Optional<FoodSearchStrategyService.SearchResult> result = 
-                foodSearchStrategyService.findBestMatch(metadata);
+  private FoodNutrition food(String key, String name, double calories, double protein, double fat, double carbs) {
+    return FoodNutrition.builder()
+        .foodKey(key)
+        .displayName(name)
+        .calories(BigDecimal.valueOf(calories))
+        .protein(BigDecimal.valueOf(protein))
+        .fat(BigDecimal.valueOf(fat))
+        .carbs(BigDecimal.valueOf(carbs))
+        .isActive(true)
+        .build();
+  }
 
-        // Then: Should either find salmon or return empty (test data may not persist)
-        if (result.isPresent()) {
-            assertThat(result.get().getFood().getName().toLowerCase()).contains("salmon");
-        }
-    }
-
-    @Test
-    @DisplayName("Should fallback gracefully when no match found")
-    void shouldFallbackWhenNoMatch() {
-        // Given: Metadata for non-existent food
-        FoodMetadata metadata = FoodMetadata.builder()
-                .baseIngredient("UnknownFood")
-                .searchTerms(Arrays.asList("UnknownFood"))
-                .build();
-
-        // When
-        Optional<FoodSearchStrategyService.SearchResult> result = 
-                foodSearchStrategyService.findBestMatch(metadata);
-
-        // Then: Should return empty (will use default nutrition)
-        assertThat(result).isEmpty();
-    }
-
-    /**
-     * Seed test database with sample USDA foods
-     */
-    private void seedTestData() {
-        // Fried chicken breast
-        UsdaFood friedChicken = createFood("001", "Chicken, breast, fried, breaded", 
-                250.0, 30.0, 12.0, 8.0);
-        usdaFoodRepository.save(friedChicken);
-
-        // Raw beef
-        UsdaFood rawBeef = createFood("002", "Beef, raw",
-                125.0, 20.0, 5.0, 0.0);
-        usdaFoodRepository.save(rawBeef);
-
-        // Grilled salmon
-        UsdaFood grilledSalmon = createFood("003", "Salmon, grilled",
-                200.0, 22.0, 12.0, 0.0);
-        usdaFoodRepository.save(grilledSalmon);
-
-        // Steamed rice
-        UsdaFood steamedRice = createFood("004", "Rice, white, steamed",
-                130.0, 2.7, 0.3, 28.0);
-        usdaFoodRepository.save(steamedRice);
-    }
-
-    private UsdaFood createFood(String fdcId, String name, 
-                                Double calories, Double protein, Double fat, Double carbs) {
-        UsdaFood food = UsdaFood.builder()
-                .fdcId(fdcId)
-                .name(name)
-                .description(name + " (test data)") // Differentiate description for test clarity
-                .category("Test")
-                .build();
-
-        UsdaFoodNutrition nutrition = UsdaFoodNutrition.builder()
-                .calories(BigDecimal.valueOf(calories))
-                .proteinG(BigDecimal.valueOf(protein))
-                .fatG(BigDecimal.valueOf(fat))
-                .carbsG(BigDecimal.valueOf(carbs))
-                .build();
-
-        food.attachNutrition(nutrition);
-        return food;
-    }
+  @SpringBootConfiguration
+  @EnableAutoConfiguration
+  @EntityScan(basePackageClasses = FoodNutrition.class)
+  @EnableJpaRepositories(basePackageClasses = FoodNutritionRepository.class)
+  static class TestJpaConfig {
+  }
 }
